changing save method

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "validator": "^13.1.1"
   },
   "scripts": {
-    "server": "nodemon server/server.js",
+    "server": "node server/server.js",
     "dev": "react-scripts start",
     "start": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "react-scripts build",
